Added the show endpoint for people group global data.
